--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -8,16 +8,8 @@
     {{ 'IOT.TITLE' | translate }}
   </app-event-title>
 
-  <div *ngIf="isEnrollingAvailable()">
-    <div class="d-flex flex-row-reverse">
-      <!-- Button is inside <a> tag because it allows a greater hitmark -->
-      <a href="{{ enrollLink }}" target="_blank" class="button-text">
-        <button class="goback-button">
-          {{ 'IOT.ENROLL' | translate }}
-        </button>
-      </a>
-    </div>
-  </div>
+  <!-- INSCRIPTION section -->
+  <app-event-inscription-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink"/>
 
   <!-- Introductory text -->
   <app-event-section title="{{ 'IOT.DESC.TITLE' | translate }}">
@@ -27,7 +19,7 @@
     <p>{{ 'IOT.DESC.TEXT.4' | translate }}</p>
   </app-event-section>
 
-  <app-event-date-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink" />
+  <app-event-date-section [dates]="event?.dates" />
 
   <app-event-section title="{{ 'IOT.GALLERY_TITLE' | translate }}">
     <app-image-carousel [imageLinks]="imageLinks"></app-image-carousel>
