feat: inscription link form for events
* feat: add inscription link to event editor form

* chore: fix form logic and style

* fix: event date section style when only one date shows

* chore: isEventDateCurrent & hasEventDateEnded methods

* feat: add inscription link button

* chore: allow to update date as a past date

Only if:
 - it's a period event
 - event's last date ends today or in the future

* chore: create app-event-inscription-section component

* fix: styles

--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -9,7 +9,10 @@
     {{ 'HOME.BITCUP.TITLE' | translate }}
   </app-event-title>
 
-  <!-- bitcup -->
+  <!-- INSCRIPTION section -->
+  <app-event-inscription-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink"/>
+
+    <!-- bitcup -->
   <div class="info">
     <app-event-section
       style="padding-right:3rem;"
