--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -3,16 +3,8 @@
     {{ 'DATAANALYSIS.TITLE' | translate }}
   </app-event-title>
 
-  <div *ngIf="enrollAvailable()">
-    <div class="d-flex flex-row-reverse">
-      <!-- Button is inside <a> tag because it allows a greater hitmark -->
-      <a href="{{ courseData.enrollLink }}" target="_blank" class="button-text">
-        <button class="goback-button">
-          {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }}
-        </button>
-      </a>
-    </div>
-  </div>
+  <!-- INSCRIPTION section -->
+  <app-event-inscription-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink"/>
 
   <div>
     <div class="d-flex flex-row-reverse">
