feat(profile): profile tabs functionality

--- a/src/app/shared/components/user-editor-modal/user-editor-modal.component.html
+++ b/src/app/shared/components/user-editor-modal/user-editor-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <div>
-        <h2 class="modal-title"><span>{{ user.fname }} {{ user.lname }}</span></h2>
+        <h2 class="modal-title"><span>{{ user.fullname }}</span></h2>
         <h4 class="modal-subtitle">{{ user.email }}</h4>
     </div>
     <button type="button" (click)="modalRef.hide()" class="btn">
