--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,11 @@ p { line-height: 1.5; }
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
 }
+
+@keyframes horizontal-shaking {
+  0% { transform: translateX(0) }
+  25% { transform: translateX(5px) }
+  50% { transform: translateX(-5px) }
+  75% { transform: translateX(5px) }
+  100% { transform: translateX(0) }
+}
