--- a/src/app/modules/authentication/register/register.component.html
+++ b/src/app/modules/authentication/register/register.component.html
@@ -15,22 +15,10 @@
           </mat-card-header>
           <mat-card-content class="login-card-content mt-2">
             <form id="singup-form">
-              <div class="w-100">
-                <div class="row">
-                  <div class="col-12 col-sm-6">
-                    <mat-form-field class="w-100">
-                      <mat-label for="fname">{{ 'REGISTER.FIRST_NAME' | translate }}:</mat-label>
-                      <input type="text" id="fname" required matInput>
-                    </mat-form-field>
-                  </div>
-                  <div class="col-12 col-sm-6">
-                    <mat-form-field class="w-100">
-                      <mat-label for="lname">{{ 'REGISTER.LAST_NAME' | translate }}:</mat-label>
-                      <input type="text" id="lname" required matInput>
-                    </mat-form-field>
-                  </div>
-                </div>
-              </div>
+              <mat-form-field class="w-100">
+                <mat-label for="fullname">{{ 'REGISTER.FULL_NAME' | translate }}:</mat-label>
+                <input type="text" id="fullname" required matInput>
+              </mat-form-field>
               <mat-form-field class="w-100">
                 <mat-label for="email">{{ 'REGISTER.EMAIL' | translate }}:</mat-label>
                 <input type="email" id="email" required matInput>
