--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -71,7 +71,7 @@
                 <i class="fas fa-user-circle text-white mx-1" style="font-size: x-large"></i>
                 <ng-container *ngIf="user$ | async as user; else notLogged">
                     <div *ngIf="user !== null; else notLogged">
-                        <div class="account">{{'NAVBAR.WELCOME' | translate}} {{user.fname}}</div>
+                        <div class="account">{{'NAVBAR.WELCOME' | translate}} {{ user.fullname.split(" ")[0] }}</div>
                     </div>
 
                 </ng-container>
@@ -82,6 +82,7 @@
 
           <div class="dropdown-menu dropdown-menu-right dropdown-primary">
               <ng-container *ngIf="user$ | async; else noUser">
+                <a class="dropdown-item"  [routerLink]="['/profile']">{{ 'NAVBAR.PROFILE' | translate }}</a>
                 <a class="dropdown-item" *ngIf="isAdmin$ | async"  [routerLink]="['/admin']">{{ 'NAVBAR.ADMIN' | translate }}</a>
                 <a class="dropdown-item"  (click)="logoutUser()">{{ 'LOGOUT.TITLE' | translate }}</a>
               </ng-container>
