--- a/src/app/shared/components/event-facts-banner/event-facts-banner.component.html
+++ b/src/app/shared/components/event-facts-banner/event-facts-banner.component.html
@@ -1,7 +1,7 @@
 <div class="facts-banner">
-    <img src="{{imageUrl}}" alt="{{imageAlt}}">
+    <img src="{{imageUrl}}" alt="{{imageAlt}}" class="banner-image">
     <div class="container" *ngIf="facts">
-      <div class="row">
+      <div class="facts-container">
         <div class="col-sm">
           <h1>15</h1>
           <h3 class="facts">{{ facts[0] | translate }}</h3>
