feat: add lastTime to event editor form

--- a/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
+++ b/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
@@ -117,6 +117,15 @@
                                             formControlName="lastDate"
                                         >
                                     </div>
+                                    <div class="event-date-input">
+                                        <label class="event-date-label" for="{{eventDate + '-lastTime'}}">{{ "HOME.EVENTS.TIME.TITLE" | translate }}</label>
+                                        <input
+                                            type="time"
+                                            id="{{eventDate + '-lastTime'}}"
+                                            class="form-control"
+                                            formControlName="lastTime"
+                                        >
+                                    </div>
                                 </div>
                             </div>
                             <div *ngIf="isEventDateTentative(eventDate)" class="event-month">
