feat: new sponsors

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -36,8 +36,8 @@
 
   <!-- Sponsors -->
   <app-event-section title="{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}">
-    <app-sponsor-component style="display: flex; justify-content: center;"
-    [currentsponsor]="sponsorsServiceVar.getIeextremeSponsors()"></app-sponsor-component>
+    <app-sponsor-component style="display: flex; justify-content: center"
+                           [currentsponsor]="sponsorsServiceVar.getIeextremeSponsors()"></app-sponsor-component>
   </app-event-section>
 
   <!-- Sponsor team -->
