--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -15,19 +15,29 @@
         {{ role.code | translate }}
     </mat-chip-option>
 </mat-chip-listbox>
-<table>
-    <tr>
-        <th>{{ "ADMIN.USERTAB.TABLE.FULL_NAME" | translate }}</th>
-        <th>{{ "ADMIN.USERTAB.TABLE.EMAIL" | translate }}</th>
-        <th>{{ "ADMIN.USERTAB.TABLE.ROLE" | translate }}</th>
-    </tr>
-    <tr *ngFor="let user of (users$ | async).content" (click)="openModal(user)">
-        <td>{{ user.fullname }}</td>
-        <td>{{ user.email }}</td>
-        <td class="role-col">
-            <mat-chip class="small-chip" *ngIf="roles[user.role]" [color]="roles[user.role].color" highlighted>{{ roles[user.role].code | translate }}</mat-chip>
-        </td>
-    </tr>
+<table class="table align-middle mb-0 mt-2 rounded">
+    <thead class="bg-light">
+        <tr>
+            <th class="pb-1">{{ "ADMIN.USERTAB.TABLE.FULL_NAME" | translate }}</th>
+            <th class="pb-1 text-center">{{ "ADMIN.USERTAB.TABLE.ROLE" | translate }}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of (users$ | async).content" (click)="openModal(user)">
+            <td>
+                <div class="d-flex align-items-center py-2">
+                    <app-profile-picture size="45px" [src]="user.photoURL"></app-profile-picture>
+                    <div class="ms-3">
+                      <p class="fw-bold mb-1">{{ user.fullname }}</p>
+                      <p class="text-muted mb-0">{{ user.email }}</p>
+                    </div>
+                </div>
+            </td>
+            <td class="role-col">
+                <mat-chip class="small-chip" *ngIf="roles[user.role]" [color]="roles[user.role].color" highlighted>{{ roles[user.role].code | translate }}</mat-chip>
+            </td>
+        </tr>
+    </tbody>
 </table>
 <mat-paginator 
     #paginator
