--- a/src/app/modules/authentication/profile/pages/profile/profile.component.html
+++ b/src/app/modules/authentication/profile/pages/profile/profile.component.html
@@ -8,11 +8,11 @@
             </div>
         </div>
         <mat-nav-list>
-            <div *ngFor="let tab of tabs" [class.selected]="url.split('/')[2] == tab.link">
+            <div *ngFor="let tab of tabs" [class.selected]="url.split('/')[2] === tab.link">
                 <a mat-list-item
                 class="tab-item"
                 [activated]="tab.isActive"
-                [routerLink]="[tab.link]" 
+                [routerLink]="[tab.link]"
                 routerLinkActive="router-link-active">
                     <mdb-icon fas [icon]="tab.icon" class="tab-icon" mdbWavesEffect />
                     {{ tab.title | translate }}
