--- a/src/app/shared/components/individual-card/individual-card.component.html
+++ b/src/app/shared/components/individual-card/individual-card.component.html
@@ -23,8 +23,8 @@
             </mdb-card-title>
 
             <!-- Cargo de la persona -->
-            <mdb-card-text *ngIf="person.role !== 'NULL'" id="roleTextContainer">
-              <h5 class="roleTextContainer">{{ person.role | translate }}</h5>
+            <mdb-card-text *ngIf="person.roles !== 'NULL'" id="roleTextContainer">
+              <h5 class="roleTextContainer">{{ person.roles | translate }}</h5>
             </mdb-card-text>
 
           <div class="iconContainer">
