--- a/src/app/modules/ras/pages/ras/ras.component.html
+++ b/src/app/modules/ras/pages/ras/ras.component.html
@@ -41,7 +41,7 @@
       <hr>
       <h2 class="section-title">{{ "RAS.TEAM.TITLE" | translate}}</h2>
       <div *ngIf="team$ !== null && team$ | async as team; else loading">
-          <app-team-card [team]="team.team"></app-team-card>
+<!--          <app-team-card [team]="team.team"></app-team-card>-->
       </div>
         <ng-template #loading>
             <app-loading-spinner></app-loading-spinner>
