--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -16,9 +16,9 @@
     <div *ngIf="team$ | async as team; else loading">
         <mat-expansion-panel *ngFor="let commission of team" class="mat-elevation-z0 expansion-panel">
             <mat-expansion-panel-header>
-                <mat-panel-title>{{ commission.name | translate }}</mat-panel-title>
+                <mat-panel-title>{{ commission.id | translate }}</mat-panel-title>
             </mat-expansion-panel-header>
-            <app-team-card [team]="commission.team"></app-team-card>
+<!--            <app-team-card [team]="commission.team"></app-team-card>-->
         </mat-expansion-panel>
     </div>
       <ng-template #loading>
