--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -34,7 +34,10 @@
                 </div>
             </td>
             <td class="role-col">
-                <mat-chip class="small-chip" *ngIf="roles[user.role]" [color]="roles[user.role].color" highlighted>{{ roles[user.role].code | translate }}</mat-chip>
+                <div class="chip-container" *ngIf="user.roles.length > 0">
+                  <mat-chip class="small-chip" [color]="roles[user.roles[0]].color" highlighted>{{ roles[user.roles[0]].code | translate }}</mat-chip>
+                  <mat-chip class="small-chip" *ngIf="user.roles.length > 1" [color]="roles[user.roles[1]].color" highlighted>+{{ user.roles.length - 1 }}</mat-chip>
+                </div>
             </td>
         </tr>
     </tbody>
